--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
     "process": "^0.11.10",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
-    "web3": "^1.0.0-beta.23"
+    "web3": "^0.20.0"
   }
 }
