--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "process": "^0.11.10",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
+    "react-navigation": "^1.0.0-beta.15",
     "web3": "^0.20.0"
   }
 }
