--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
   },
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
+    "bip39": "^2.4.0",
     "buffer": "^5.0.8",
+    "ethereumjs-wallet": "^0.6.0",
     "node-libs-browser": "^2.0.0",
     "process": "^0.11.10",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
+    "react-native-elements": "^0.17.0",
+    "react-native-vector-icons": "^4.4.2",
     "react-navigation": "^1.0.0-beta.15",
     "web3": "^0.20.0"
   }
