--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
     "bip39": "^2.4.0",
+    "bluebird": "^3.5.1",
     "buffer": "^5.0.8",
     "ethereumjs-wallet": "^0.6.0",
     "node-libs-browser": "^2.0.0",
@@ -27,6 +28,7 @@
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
     "react-native-elements": "^0.17.0",
+    "react-native-modal-picker": "0.0.16",
     "react-native-vector-icons": "^4.4.2",
     "react-navigation": "^1.0.0-beta.15",
     "web3": "^0.20.0"
