--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-elements": "^0.17.0",
     "react-native-vector-icons": "^4.4.2",
     "react-navigation": "^1.0.0-beta.15",
+    "truffle-hdwallet-provider": "0.0.3",
     "web3": "^0.20.0"
   }
 }
