--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-preset-react-native-stage-0": "^1.0.1",
     "jest-expo": "^21.0.2",
     "react-test-renderer": "16.0.0-alpha.12",
+    "redux-devtools": "^3.4.0",
     "truffle-contract": "^3.0.0"
   },
   "scripts": {
@@ -32,6 +33,8 @@
     "react-native-vector-icons": "^4.4.2",
     "react-navigation": "^1.0.0-beta.15",
     "truffle-hdwallet-provider": "0.0.3",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "web3": "^0.20.0"
   }
 }
