--- a/package.json
+++ b/package.json
@@ -29,11 +29,18 @@
     "react-native-bip39": "^2.3.0",
     "react-native-elements": "^0.17.0",
     "react-native-modal-picker": "0.0.16",
+    "react-native-randombytes": "^3.0.0",
     "react-native-vector-icons": "^4.4.2",
     "react-navigation": "^1.0.0-beta.15",
-    "truffle-hdwallet-provider": "0.0.3",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "truffle-hdwallet-provider": "0.0.3",
     "web3": "^0.20.0"
+  },
+  "react-native": {
+    "crypto": "react-native-crypto"
+  },
+  "browser": {
+    "crypto": "react-native-crypto"
   }
 }
