--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-navigation": "^1.0.0-beta.15",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "truffle-hdwallet-provider": "0.0.3",
     "web3": "^0.20.0"
   },
