Updated run scripts and readme

--- a/android/local.properties
+++ b/android/local.properties
@@ -8,4 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Oct 19 09:02:40 EDT 2017
-sdk.dir=/home/josh/Android/Sdk
+sdk.dir=/home/$USER/Android/Sdk
