--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "start": "react-native start",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "test": "node node_modules/jest/bin/jest.js --watch"
+    "test": "node node_modules/jest/bin/jest.js --watch",
+    "start-rpc": "testrpc -p 8545",
+    "truffle": "truffle compile && truffle migrate --reset"
   },
   "jest": {
     "preset": "jest-expo"
